--- a/Flexdashboard_competition.Rmd
+++ b/Flexdashboard_competition.Rmd
@@ -13,7 +13,7 @@ library(rbokeh)
 library(flexdashboard)
 ```
 
-Row
+row
 -----------------------------------------------------------------------
 
 ### Species
